--- a/x690/Cargo.toml
+++ b/x690/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "ber"
+name = "x690"
 version = "0.1.0"
 edition = "2021"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 asn1 = { path = "../asn1" }
