--- a/ber/Cargo.toml
+++ b/ber/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 asn1 = { path = "../asn1" }
+x690 = { path = "../x690" }
 bitvec = "1"
 chrono = "0.4.19"
 num = "0.4.0"
