--- a/idm/Cargo.toml
+++ b/idm/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
-name = "x500"
+name = "idm"
 version = "0.1.0"
 edition = "2021"
-rust-version = "1.65"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-asn1 = { path = "../asn1" }
-x690 = { path = "../x690" }
-ldap = { path = "../ldap" }
+tokio = { version = "1", features = ["net"] }
