--- a/x500-client/Cargo.toml
+++ b/x500-client/Cargo.toml
@@ -13,3 +13,4 @@ x500 = { path = "../x500" }
 x690 = { path = "../x690" }
 tokio = { version = "1", features = ["net"] }
 async-trait = "0.1.59"
+tokio-stream = "0.1"
