--- a/x500-client/Cargo.toml
+++ b/x500-client/Cargo.toml
@@ -11,6 +11,6 @@ idm = { path = "../idm" }
 rose-transport = { path = "../rose-transport" }
 x500 = { path = "../x500" }
 x690 = { path = "../x690" }
-tokio = { version = "1", features = ["net"] }
+tokio = { version = "1", features = ["net", "macros", "rt", "time"] }
 async-trait = "0.1.59"
 tokio-stream = "0.1"
