Get IDM async read_pdu() working

--- a/idm/Cargo.toml
+++ b/idm/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1", features = ["io-util"] }
 tokio-stream = "0.1"
+
+[dev-dependencies]
+mock-tcpstream = { path = "../mock-tcpstream" }
+tokio = { version = "1", features = ["macros", "rt"] }
