--- a/asn1/Cargo.toml
+++ b/asn1/Cargo.toml
@@ -2,3 +2,14 @@
 name = "asn1"
 version = "0.1.0"
 edition = "2021"
+authors = [
+    "Jonathan M. Wilbur <jonathan@wilbur.space>",
+    "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
+]
+description = "Abstract Syntax Notation 1 (ASN.1)"
+readme = "README.md"
+repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/asn1"
+license = "MIT"
+license-file = "LICENSE.txt"
+keywords = ["asn", "asn1", "abstract", "syntax", "notation"]
+categories = ["encoding"]
