--- a/cms/Cargo.toml
+++ b/cms/Cargo.toml
@@ -2,6 +2,17 @@
 name = "cms"
 version = "0.1.0"
 edition = "2021"
+authors = [
+    "Jonathan M. Wilbur <jonathan@wilbur.space>",
+    "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
+]
+description = "Cryptographic Message Syntax (CMS) Structures"
+readme = "README.md"
+repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/cms"
+license = "MIT"
+license-file = "LICENSE.txt"
+keywords = ["cms", "cryptography", "message", "syntax", "cades"]
+categories = ["cryptography"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
