--- a/tsp/Cargo.toml
+++ b/tsp/Cargo.toml
@@ -2,6 +2,17 @@
 name = "tsp"
 version = "0.1.0"
 edition = "2021"
+authors = [
+    "Jonathan M. Wilbur <jonathan@wilbur.space>",
+    "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
+]
+description = "RFC 3161 Time-Stamp Protocol (TSP) data structures"
+readme = "README.md"
+repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/tsp"
+license = "MIT"
+license-file = "LICENSE.txt"
+keywords = ["timestamping", "rfc3161", "trusted", "timestamp", "time"]
+categories = ["network-programming"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
