--- a/x500-client/Cargo.toml
+++ b/x500-client/Cargo.toml
@@ -2,6 +2,17 @@
 name = "x500-client"
 version = "0.1.0"
 edition = "2021"
+authors = [
+    "Jonathan M. Wilbur <jonathan@wilbur.space>",
+    "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
+]
+description = "X.500 directory data structures and functionality"
+readme = "README.md"
+repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/x500-client"
+license = "MIT"
+license-file = "LICENSE.txt"
+keywords = ["x500", "directory", "ldap", "client"]
+categories = ["network-programming"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
