--- a/x690/Cargo.toml
+++ b/x690/Cargo.toml
@@ -2,6 +2,17 @@
 name = "x690"
 version = "0.1.0"
 edition = "2021"
+authors = [
+    "Jonathan M. Wilbur <jonathan@wilbur.space>",
+    "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
+]
+description = "Basic Encoding Rules (BER) and Distinguished Encoding Rules (DER)"
+readme = "README.md"
+repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/x500-client"
+license = "MIT"
+license-file = "LICENSE.txt"
+keywords = ["basic", "distinguished", "encoding", "ber", "der"]
+categories = ["encoding"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
