--- a/tsp.config.toml
+++ b/tsp.config.toml
@@ -1,4 +1,5 @@
-path_to_key = "/etc/tsp/key.pem"
+path_to_key = "./config/key.pem"
+path_to_certs = "./config/cert.pem"
 # default_tsa_policy = "1.3.6.1.4.1.56490.100"
 # answer_cert_reqs = true
 # clock_precision_digits = 1
@@ -6,3 +7,6 @@ path_to_key = "/etc/tsp/key.pem"
 # system_locale = "en"
 # timezone = -5
 # tsa_name = "dirName:O=Wildboar Software,CN=TSP Server 01"
+
+[http]
+port = 8080
