Add TPKT / Q.931 library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ members = [
     "tsp-server",
     "x500dsa",
     "dirstudio",
-    "dirstudio/src-tauri"
+    "dirstudio/src-tauri",
+    "tpkt"
 ]
