--- a/x690/Cargo.toml
+++ b/x690/Cargo.toml
@@ -8,7 +8,7 @@ authors = [
 ]
 description = "Basic Encoding Rules (BER) and Distinguished Encoding Rules (DER)"
 readme = "README.md"
-repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/x500-client"
+repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/x690"
 license = "MIT"
 keywords = ["basic", "distinguished", "encoding", "ber", "der"]
 categories = ["encoding"]
