--- a/x691/Cargo.toml
+++ b/x691/Cargo.toml
@@ -17,4 +17,8 @@ categories = ["encoding"]
 
 [dependencies]
 asn1 = { path = "../asn1" }
-bitvec = "1.0.1"
+x690 = { path = "../x690" }
+bitvec = "1.0"
+syn = { version = "1.0" }
+proc-macro2 = { version = "1.0" }
+log = { version = "0.4", features = ["release_max_level_info"] }
