--- a/idm/Cargo.toml
+++ b/idm/Cargo.toml
@@ -17,6 +17,7 @@ categories = ["network-programming"]
 
 [dependencies]
 tokio = { version = "1", features = ["io-util"] }
+bytes = "1.4.0"
 
 [dev-dependencies]
 mock-tcpstream = { path = "../mock-tcpstream" }
