--- a/x500-client/Cargo.toml
+++ b/x500-client/Cargo.toml
@@ -18,7 +18,10 @@ categories = ["network-programming"]
 [dependencies]
 asn1 = { path = "../asn1" }
 idm = { path = "../idm" }
-rose-transport = { path = "../rose-transport" }
+# rose-transport = { path = "../rose-transport" }
+rose = { path = "../rose" }
+rose-idm = { path = "../rose-idm" }
+rose-client = { path = "../rose-client" }
 x500 = { path = "../x500" }
 x690 = { path = "../x690" }
 tokio = { version = "1", features = ["net", "macros", "rt", "time"] }
