--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
     "x500dsa",
     "dirstudio",
     "dirstudio/src-tauri",
+    "dirstudio-api-types",
     "tpkt",
     "x691",
     "rose",
