--- a/dirstudio/Cargo.toml
+++ b/dirstudio/Cargo.toml
@@ -15,6 +15,11 @@ yew = { version="0.20.0", features = ["csr"] }
 asn1 = { path = "../asn1" }
 x500 = { path = "../x500" }
 x690 = { path = "../x690" }
+serde_json = "1.0.96"
+log = "0.4.17"
+wasm-logger = "0.2.0"
+dirstudio-api-types = { path = "../dirstudio-api-types" }
+hex = "0.4.3"
 
 # [workspace]
 # members = ["src-tauri"]
