--- a/dirstudio/Cargo.toml
+++ b/dirstudio/Cargo.toml
@@ -10,7 +10,7 @@ js-sys = "0.3.59"
 serde = { version = "1.0.140", features = ["derive"] }
 wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.4.32"
-web-sys = "0.3.59"
+web-sys = { version = "0.3.59", "features" = ["Navigator", "Clipboard", "CssStyleDeclaration", "HtmlStyleElement"] }
 yew = { version="0.20.0", features = ["csr"] }
 asn1 = { path = "../asn1" }
 x500 = { path = "../x500" }
@@ -20,6 +20,8 @@ log = "0.4.17"
 wasm-logger = "0.2.0"
 dirstudio-api-types = { path = "../dirstudio-api-types" }
 hex = "0.4.3"
+# material-yew = { version = "0.2", "features" = ["icon", "icon-button"] }
+gloo = "0.8.0"
 
 # [workspace]
 # members = ["src-tauri"]
