--- a/dirstudio/src-tauri/Cargo.toml
+++ b/dirstudio/src-tauri/Cargo.toml
@@ -16,7 +16,7 @@ tauri-build = { version = "1.2", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = ["shell-open"] }
+tauri = { version = "1.2", features = ["clipboard-write-text", "shell-open"] }
 tokio = { version = "1", features = ["rt"] }
 asn1 = { path = "../../asn1" }
 idm = { path = "../../idm" }
