Minimal storage driver definition

--- a/x500dsa/Cargo.toml
+++ b/x500dsa/Cargo.toml
@@ -11,3 +11,6 @@ idm = { path = "../idm" }
 x500 = { path = "../x500" }
 x690 = { path = "../x690" }
 ldap = { path = "../ldap" }
+thiserror = "1.0.40"
+async-trait = "0.1.59"
+tokio-stream = "0.1"
