--- a/x690/Cargo.toml
+++ b/x690/Cargo.toml
@@ -17,6 +17,7 @@ categories = ["encoding"]
 
 [dependencies]
 asn1 = { path = "../asn1" }
+smallvec = "1.11.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
