--- a/x690/Cargo.toml
+++ b/x690/Cargo.toml
@@ -18,6 +18,7 @@ categories = ["encoding"]
 [dependencies]
 asn1 = { path = "../asn1" }
 smallvec = "1.11.0"
+simdutf8 = "0.1.4"
 
 [dev-dependencies]
 criterion = "0.5.1"
