--- a/x690/Cargo.toml
+++ b/x690/Cargo.toml
@@ -19,6 +19,7 @@ categories = ["encoding"]
 asn1 = { path = "../asn1" }
 smallvec = "1.11.0"
 simdutf8 = "0.1.4"
+bytes = "1.4.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
