--- a/x500/Cargo.toml
+++ b/x500/Cargo.toml
@@ -2,7 +2,7 @@
 name = "x500"
 version = "0.1.0"
 edition = "2021"
-rust-version = "1.65"
+rust-version = "1.71.0"
 authors = [
     "Jonathan M. Wilbur <jonathan@wilbur.space>",
     "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
@@ -25,4 +25,4 @@ nsap-address = { path = "../nsap-address" }
 hex = "0.4.3"
 punycode = "0.4.1"
 cow-utils = "0.1.3"
-celes = "2.4.0"
+isocountry = "0.3.2"
