--- a/osi-net/Cargo.toml
+++ b/osi-net/Cargo.toml
@@ -11,3 +11,6 @@ rand = "0.8.5"
 rand-sequence = "0.1.1"
 nom = "7.1.3"
 smallvec = "1.11.1"
+
+[dev-dependencies]
+tokio = { version = "1", features = ["full"] }
