--- a/asn1/Cargo.toml
+++ b/asn1/Cargo.toml
@@ -12,3 +12,11 @@ repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/asn1"
 license = "MIT"
 keywords = ["asn", "asn1", "abstract", "syntax", "notation"]
 categories = ["encoding"]
+
+[dependencies]
+likely_stable = { version = "0.1.3", optional = true }
+atoi_simd = { version = "0.16.0", optional = true }
+
+[features]
+branch_prediction = ["likely_stable"]
+simd = ["atoi_simd"]
