--- a/asn1/Cargo.toml
+++ b/asn1/Cargo.toml
@@ -14,9 +14,8 @@ keywords = ["asn", "asn1", "abstract", "syntax", "notation"]
 categories = ["encoding"]
 
 [dependencies]
-likely_stable = { version = "0.1.3", optional = true }
 atoi_simd = { version = "0.16.0", optional = true }
+likely_stable = { version = "0.1.3", optional = true }
 
 [features]
-branch_prediction = ["likely_stable"]
-simd = ["atoi_simd"]
+default = ["atoi_simd", "likely_stable"]
