--- a/asn1/Cargo.toml
+++ b/asn1/Cargo.toml
@@ -18,6 +18,7 @@ atoi_simd = { version = "0.16.0", optional = true }
 faster-hex = { version = "0.10.0", optional = true }
 itoa = { version = "1.0.15", optional = true }
 likely_stable = { version = "0.1.3", optional = true }
+arbitrary = { version = "1", optional = true, features = ["derive"] }
 
 [features]
 default = ["atoi_simd", "likely_stable", "itoa", "faster-hex"]
