chore(asn1lex): add lexing library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,8 @@ members = [
     "ldap-schema-parsers",
     "rfc4523-parsing",
     "osi-net",
-    "fuzz"
+    "fuzz",
+    "asn1lex",
 ]
 
 [workspace.dependencies]
