--- a/asn1/Cargo.toml
+++ b/asn1/Cargo.toml
@@ -19,6 +19,7 @@ faster-hex = { version = "0.10.0", optional = true }
 itoa = { version = "1.0.15", optional = true }
 likely_stable = { version = "0.1.3", optional = true }
 arbitrary = { version = "1", optional = true, features = ["derive"] }
+smallvec = { version = "1", optional = true, features = ["union", "write"] }
 
 [features]
-default = ["atoi_simd", "likely_stable", "itoa", "faster-hex"]
+default = ["atoi_simd", "likely_stable", "itoa", "faster-hex", "smallvec"]
