--- a/asn1/Cargo.toml
+++ b/asn1/Cargo.toml
@@ -19,7 +19,20 @@ faster-hex = { version = "0.10.0", optional = true }
 itoa = { version = "1.0.15", optional = true }
 likely_stable = { version = "0.1.3", optional = true }
 arbitrary = { version = "1", optional = true, features = ["derive"] }
-smallvec = { version = "1", optional = true, features = ["union", "write"] }
+smallvec = { version = "1", optional = true, features = ["union"] }
 
 [features]
-default = ["atoi_simd", "likely_stable", "itoa", "faster-hex", "smallvec"]
+default = ["likely_stable", "smallvec"]
+
+[dev-dependencies]
+criterion = "0.6"
+smallvec = { version = "1" }
+
+[[bench]]
+name = "oid"
+harness = false
+
+# [[bench]]
+# name = "date"
+# harness = false
+
