--- a/asn1/Cargo.toml
+++ b/asn1/Cargo.toml
@@ -16,13 +16,13 @@ categories = ["encoding"]
 [dependencies]
 atoi_simd = { version = "0.16.0", optional = true }
 faster-hex = { version = "0.10.0", optional = true }
-itoa = { version = "1.0.15", optional = true }
+itoa = { version = "1", optional = true }
 likely_stable = { version = "0.1.3", optional = true }
 arbitrary = { version = "1", optional = true, features = ["derive"] }
 smallvec = { version = "1", optional = true, features = ["union"] }
 
 [features]
-default = ["likely_stable", "smallvec"]
+default = []
 
 [dev-dependencies]
 criterion = "0.6"
