--- a/x690/Cargo.toml
+++ b/x690/Cargo.toml
@@ -21,6 +21,7 @@ iso6093 = { path = "../iso6093" }
 smallvec = "1.11.0"
 simdutf8 = "0.1.4"
 bytes = "1.4.0"
+likely_stable = { version = "0.1.3", optional = true }
 
 [dev-dependencies]
 criterion = "0.5.1"
