--- a/x690/Cargo.toml
+++ b/x690/Cargo.toml
@@ -6,7 +6,7 @@ authors = [
     "Jonathan M. Wilbur <jonathan@wilbur.space>",
     "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
 ]
-description = "Basic Encoding Rules (BER) and Distinguished Encoding Rules (DER)"
+description = "Basic Encoding Rules (BER) and Distinguished Encoding Rules (DER) as specified in ITU-T Recommendation X.690"
 readme = "README.md"
 repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/x690"
 license = "MIT"
