--- a/x690/Cargo.toml
+++ b/x690/Cargo.toml
@@ -19,7 +19,7 @@ categories = ["encoding"]
 wildboar-asn1 = { path = "../asn1" }
 iso6093 = { path = "../iso6093" }
 smallvec = "1.11.0"
-simdutf8 = "0.1.4"
+simdutf8 = { version = "0.1.4", optional = true }
 bytes = "1.4.0"
 likely_stable = { version = "0.1.3", optional = true }
 
@@ -29,3 +29,7 @@ criterion = "0.5.1"
 [[bench]]
 name = "decode"
 harness = false
+
+[features]
+default = ["simdutf8", "der"]
+der = []
