--- a/x690/Cargo.toml
+++ b/x690/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "x690"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 authors = [
     "Jonathan M. Wilbur <jonathan@wilbur.space>",
@@ -16,10 +16,10 @@ categories = ["encoding"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-wildboar-asn1 = { path = "../asn1" }
-iso6093 = { path = "../iso6093" }
-simdutf8 = { version = "0.1.4", optional = true }
+wildboar-asn1 = { path = "../asn1", version = "3" }
+iso6093 = { path = "../iso6093", version = "1" }
 bytes = "1.4.0"
+simdutf8 = { version = "0.1.4", optional = true }
 likely_stable = { version = "0.1.3", optional = true }
 
 [dev-dependencies]
@@ -30,5 +30,5 @@ name = "decode"
 harness = false
 
 [features]
-default = ["simdutf8", "der"]
+default = []
 der = []
