feat(ldapdn): nested iterators and error type impl

--- a/ldapdn/Cargo.toml
+++ b/ldapdn/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "ldapdn"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2024"
 
-[dependencies]
+[features]
+default = ["std"]
+std = []
