--- a/ldapdn/Cargo.toml
+++ b/ldapdn/Cargo.toml
@@ -2,7 +2,17 @@
 name = "ldapdn"
 version = "1.0.0"
 edition = "2024"
+authors = [
+    "Jonathan M. Wilbur <jonathan@wilbur.space>",
+    "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
+]
+description = "LDAP Distinguished Name (DN) unescaping and zero-copy parsing"
+readme = "README.md"
+repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/ldapdn"
+license = "MIT"
+keywords = ["ldap", "dn", "directory", "name"]
+categories = ["encoding", "parser-implementations", "no-std", "no-std::no-alloc"]
 
 [features]
-default = ["std"]
-std = []
+default = ["alloc"]
+alloc = []
