chore(ldap): change name to wildboar-ldap

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,8 @@ members = [
     "osi-net",
     "fuzz",
     "asn1lex",
-    "iso6093", "ldapdn",
+    "iso6093",
+    "ldapdn",
 ]
 
 [workspace.dependencies]
