--- a/ldap/Cargo.toml
+++ b/ldap/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "ldap"
-version = "0.1.0"
+name = "wildboar-ldap"
+version = "1.0.0"
 edition = "2021"
 authors = [
     "Jonathan M. Wilbur <jonathan@wilbur.space>",
@@ -11,8 +11,7 @@ readme = "README.md"
 repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/ldap"
 license = "MIT"
 keywords = ["ldap", "directory", "x500"]
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+categories = ["network-programming"]
 
 [dependencies]
 wildboar-asn1 = { path = "../asn1" }
