--- a/x500/Cargo.toml
+++ b/x500/Cargo.toml
@@ -19,7 +19,7 @@ categories = ["network-programming"]
 [dependencies]
 wildboar-asn1 = { path = "../asn1" }
 x690 = { path = "../x690" }
-wildboar-ldap = { path = "../ldap" }
+wildboar-ldap = { version = "1", path = "../ldap" }
 teletex = { path = "../teletex" }
 nsap-address = { path = "../nsap-address" }
 hex = "0.4.3"
@@ -27,3 +27,4 @@ punycode = "0.4.1"
 cow-utils = "0.1.3"
 isocountry = "0.3.2"
 bytes = "1.4.0"
+pki-stub = { path = "../pki-stub" }
