--- a/pki-stub/Cargo.toml
+++ b/pki-stub/Cargo.toml
@@ -15,6 +15,8 @@ chrono = { version = "0.4.41", features = ["clock"] }
 x520-stringprep = { path = "../x520-stringprep", features = ["alloc"] }
 bytemuck = "1.23.1"
 email_address = { version = "0.2.9", features = [] }
+phf = { version = "0.12", features = ["macros"] }
+ldapdn = { version = "1", path = "../ldapdn" }
 
 [dev-dependencies]
 rand = "0.9.2"
