--- a/pki-stub/Cargo.toml
+++ b/pki-stub/Cargo.toml
@@ -17,6 +17,7 @@ bytemuck = "1.23.1"
 email_address = { version = "0.2.9", features = [] }
 phf = { version = "0.12", features = ["macros"] }
 ldapdn = { version = "1", path = "../ldapdn" }
+ldappostaladdr = { version = "1", path = "../ldappostaladdr" }
 
 [dev-dependencies]
 rand = "0.9.2"
