--- a/teletex/Cargo.toml
+++ b/teletex/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "teletex"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+version = "1.0.0"
+edition = "2024"
+authors = [
+    "Jonathan M. Wilbur <jonathan@wilbur.space>",
+    "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
+]
+description = "ITU-T Recommendation T.61 / Teletex to Unicode conversion"
+readme = "README.md"
+repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/teletex"
+license = "MIT"
+keywords = ["teletex", "t61", "t.61"]
+categories = ["encoding"]
