--- a/tpkt/Cargo.toml
+++ b/tpkt/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tpkt"
+name = "tpkt3"
 version = "1.0.0"
 edition = "2024"
 authors = [
@@ -8,7 +8,7 @@ authors = [
 ]
 description = "ISO Transport over TCP (ITOT) TPKT Decoding"
 readme = "README.md"
-repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/tpkt"
+repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/tpkt3"
 license = "MIT"
 keywords = ["itot", "osi", "rfc983", "rfc1006", "rfc2126"]
 categories = ["no-std", "network-programming"]
